# rules_blender

./: .bazelrc  .gitattributes  .gitignore  .mypy.ini  MODULE.bazel  README.md  bzlmod.html  index.html  print.html  rules.html  searchindex.js  searchindex.json
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: ci.yaml  release.yaml
blender/: BUILD.bazel  blender_export.bzl  blender_test.bzl  blender_toolchain.bzl  defs.bzl  extensions.bzl
blender/exporters/: BUILD.bazel  gltf.py
blender/private/: BUILD.bazel  blender.bzl  export.bzl  export_process_wrapper.py  local_toolchain_repo.bzl  toolchain.bzl  toolchain_repo.bzl  versions.bzl
blender/private/tests/export_test/: BUILD.bazel  expected_from_binary.gltf  expected_from_file.gltf  gltf_export.py
blender/private/tests/mesh_test/: BUILD.bazel
docs/: BUILD.bazel
docs/src/: index.md
examples/generic/: BUILD.bazel
examples/gltf_export/: BUILD.bazel  expected.gltf  generic.blend
examples/mesh_test/: mesh_tester.py
tools/dmg_archive/: BUILD.bazel  dmg_archive.bzl
tools/http_dmg/: BUILD.bazel  http_dmg.bzl
tools/http_dmg/private/tests/: http_dmg_test_extensions.bzl
tools/repo_version/: version_test.py
tools/requirements/: requirements.in
tools/update_versions/: update_versions.py
