"""rules_blender"""

module(
    name = "rules_blender",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_features", version = "1.32.0")
bazel_dep(name = "rules_venv", version = "0.3.1")

blender = use_extension("//blender:extensions.bzl", "blender", dev_dependency = True)
blender.toolchain(
    name = "blender_toolchain",
)
use_repo(blender, "blender_toolchain")

register_toolchains(
    "@blender_toolchain//:all",
    "//tools/toolchains:black_toolchain",
    "//tools/toolchains:isort_toolchain",
    "//tools/toolchains:pylint_toolchain",
    "//tools/toolchains:mypy_toolchain",
    dev_dependency = True,
)

bazel_dep(name = "rules_req_compile", version = "1.0.0rc35", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True, repo_name = "io_bazel_stardoc")
bazel_dep(name = "rules_rust_mdbook", version = "0.62.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.4.0", dev_dependency = True)

# TODO: https://github.com/bazelbuild/rules_cc/pull/448
single_version_override(
    module_name = "rules_cc",
    version = "0.1.1",
)

requirements = use_extension("@rules_req_compile//extensions:python.bzl", "requirements", dev_dependency = True)
requirements.parse(
    name = "pip_deps",
    requirements_locks = {
        "//tools/requirements:requirements_linux_x86_64.txt": "@@//tools/requirements:linux_x86_64",
        "//tools/requirements:requirements_macos_aarch64.txt": "@@//tools/requirements:macos_aarch64",
        "//tools/requirements:requirements_windows_x86_64.txt": "@@//tools/requirements:windows_x86_64",
    },
)
use_repo(requirements, "pip_deps")

dmg_arc_test_deps = use_extension("//tools/http_dmg/private/tests:http_dmg_test_extensions.bzl", "http_dmg_test", dev_dependency = True)
use_repo(
    dmg_arc_test_deps,
    "http_dmg_test_firefox",
    "http_dmg_test_firefox_strip_prefix",
)
