load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:py_binary.bzl", "py_binary")

py_binary(
    name = "export_process_wrapper",
    srcs = ["export_process_wrapper.py"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//blender:__pkg__"],
    deps = [
        "//tools/http_dmg:http_dmg_bzl",
    ],
)
