load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bazel_tools_bzl",
    srcs = ["@bazel_tools//tools:bzl_srcs"],
)

bzl_library(
    name = "dmg_archive_bzl",
    srcs = ["dmg_archive.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_tools_bzl",
    ],
)
